@@ -16,6 +16,8 @@ Fixed bugs:
 * AntClassLoader did not isolate resources when isolate was set. Bugzilla report 38747.
 * Diagnostics broken when using java 1.4. Bugzilla report 40395.
 * Exception reporting in <copy> was broken. Bugzilla report 40300.
+* Handling of corrupt tar files, TarInputStream.read() never returns EOF.
+  Bugzilla report 39924.
 
 Other changes:
 --------------
